Extract plain text of dev set, for further model selection.

--- a/corpus_split.ipynb
+++ b/corpus_split.ipynb
@@ -22,6 +22,7 @@
     "TB_TRAIN = os.path.join(\"corpus\", \"sequoia_train.tb\")\n",
     "TB_DEV = os.path.join(\"corpus\", \"sequoia_dev.tb\")\n",
     "TB_TEST = os.path.join(\"corpus\", \"sequoia_test.tb\")\n",
+    "TXT_DEV = os.path.join(\"corpus\", \"sequoia_dev.txt\")\n",
     "TXT_TEST = os.path.join(\"corpus\", \"sequoia_test.txt\")\n",
     "\n",
     "t0 = time()\n",
@@ -64,6 +65,15 @@
     "f_test.close()\n",
     "\n",
     "corpus_root = r\"./corpus/\"\n",
+    "\n",
+    "dev_file_pattern = r\".*_dev\\.tb\"\n",
+    "ptb_dev = BracketParseCorpusReader(corpus_root, dev_file_pattern)\n",
+    "trees = ptb_dev.parsed_sents()\n",
+    "f_out = open(TXT_DEV, 'w')\n",
+    "for tree in trees:\n",
+    "    f_out.write(\"%s\\n\" % (' '.join(tree.leaves())))\n",
+    "f_out.close()\n",
+    "\n",
     "test_file_pattern = r\".*_test\\.tb\"\n",
     "ptb_test = BracketParseCorpusReader(corpus_root, test_file_pattern)\n",
     "trees = ptb_test.parsed_sents()\n",
