Fix the Unicode encoding error with python2 in a more conscious way.

--- a/PCFG_learn.ipynb
+++ b/PCFG_learn.ipynb
@@ -6,12 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# To fix the encoding error with python2\n",
-    "import sys\n",
-    "reload(sys)\n",
-    "sys.setdefaultencoding('utf8')\n",
+    "#-*- coding: utf-8 -*-\n",
     "\n",
     "import os\n",
+    "import codecs\n",
     "import random\n",
     "import pickle\n",
     "from time import time\n",
@@ -34,19 +32,25 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> Reading corpus treebanks from file...\n",
+      ">>> Corpus treebanks read done in 0.002s.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "t0 = time()\n",
     "print (\">>> Reading corpus treebanks from file...\")\n",
     "\n",
     "corpus_root = r\"corpus\"\n",
     "train_file_pattern = r\".*_train.tb\"\n",
-    "dev_file_pattern = r\".*_dev.tb\"\n",
-    "test_file_pattern = r\".*_test.tb\"\n",
     "\n",
     "ptb_train = BracketParseCorpusReader(corpus_root, train_file_pattern)\n",
-    "ptb_dev = BracketParseCorpusReader(corpus_root, dev_file_pattern)\n",
-    "ptb_test = BracketParseCorpusReader(corpus_root, test_file_pattern)\n",
     "\n",
     "print (\">>> Corpus treebanks read done in %0.3fs.\\n\" % (time() - t0))"
    ]
@@ -57,7 +61,30 @@
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> Parsing collection of rules and words...\n",
+      "Size of dictionary: 9094, of which 5017 are rare words\n",
+      "Number of word occurrances: 53453\n",
+      "Number of POS tags: 29\n",
+      "\n",
+      "Size of unary rules: 40\n",
+      "Number of unary rule occurrances: 8588\n",
+      "Number of unary lhs: 10\n",
+      "Number of unary rhs: 26\n",
+      "\n",
+      "Size of binary rules: 2918\n",
+      "Number of binary rule occurrances: 50974\n",
+      "Number of binary lhs: 741\n",
+      "Number of binary rhs: 2101\n",
+      ">>> Collection of rules and words parsing done in 3.814s.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "t0 = time()\n",
     "print (\">>> Parsing collection of rules and words...\")\n",
@@ -121,7 +148,7 @@
     "pw_pairs = list(postags_freq.keys())\n",
     "for (pos, w) in pw_pairs:\n",
     "    if w in rare_words:\n",
-    "        postags_freq[(pos, \"<UNK>\")] += postags_freq[(pos, w)]\n",
+    "        postags_freq[(pos, u\"<UNK>\")] += postags_freq[(pos, w)]\n",
     "        postags_freq.pop((pos, w))\n",
     "    \n",
     "for (pos, w) in postags_freq:\n",
@@ -133,15 +160,15 @@
     "for (lhs, rhs) in binary_rules_freq:\n",
     "    binary_rules_freq[(lhs, rhs)] /= (binary_rules_cnt_by_lhs[lhs] + unary_rules_cnt_by_lhs[lhs])\n",
     "\n",
-    "with open(PCFG_UNARY_RULES_FREQ_FILE, 'wb') as f:\n",
+    "with codecs.open(PCFG_UNARY_RULES_FREQ_FILE, 'wb') as f:\n",
     "    pickle.dump(unary_rules_freq, f)\n",
     "f.close()\n",
     "\n",
-    "with open(PCFG_BINARY_RULES_FREQ_FILE, 'wb') as f:\n",
+    "with codecs.open(PCFG_BINARY_RULES_FREQ_FILE, 'wb') as f:\n",
     "    pickle.dump(binary_rules_freq, f)\n",
     "f.close()\n",
     "\n",
-    "with open(PCFG_POSTAGS_FREQ_FILE, 'wb') as f:\n",
+    "with codecs.open(PCFG_POSTAGS_FREQ_FILE, 'wb') as f:\n",
     "    pickle.dump(postags_freq, f)\n",
     "f.close()\n",
     "\n",
@@ -163,19 +190,19 @@
     "for w in words_set:\n",
     "    if w not in rare_words:\n",
     "        postags_dict[w] = {}\n",
-    "postags_dict[\"<UNK>\"] = {}\n",
+    "postags_dict[u\"<UNK>\"] = {}\n",
     "for (pos, w) in postags_freq:\n",
     "    postags_dict[w][pos] = postags_freq[(pos, w)]\n",
     "\n",
-    "with open(PCFG_UNARY_RULES_DICT_FILE, 'wb') as f:\n",
+    "with codecs.open(PCFG_UNARY_RULES_DICT_FILE, 'wb') as f:\n",
     "    pickle.dump(unary_rules_dict, f)\n",
     "f.close()\n",
     "\n",
-    "with open(PCFG_BINARY_RULES_DICT_FILE, 'wb') as f:\n",
+    "with codecs.open(PCFG_BINARY_RULES_DICT_FILE, 'wb') as f:\n",
     "    pickle.dump(binary_rules_dict, f)\n",
     "f.close()\n",
     "\n",
-    "with open(PCFG_POSTAGS_DICT_FILE, 'wb') as f:\n",
+    "with codecs.open(PCFG_POSTAGS_DICT_FILE, 'wb') as f:\n",
     "    pickle.dump(postags_dict, f)\n",
     "f.close()\n",
     "        \n",
