--- a/corpus_split.ipynb
+++ b/corpus_split.ipynb
@@ -2,16 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> Splitting corpus into train/dev/test sets...\n",
+      "Corpus size: 3099\n",
+      "Train set size: 2479\n",
+      "Dev set size: 310\n",
+      "Test set size: 310\n",
+      ">>> Corpus split done in 0.377s.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# To fix the encoding error with python2\n",
-    "import sys\n",
-    "reload(sys)\n",
-    "sys.setdefaultencoding('utf8')\n",
+    "#-*- coding: utf-8 -*-\n",
     "\n",
     "import os\n",
+    "import codecs\n",
     "import random\n",
     "from time import time\n",
     "import string\n",
@@ -32,7 +44,7 @@
     "def remove_funcl(m):\n",
     "    return m.group().split('-')[0]\n",
     "\n",
-    "f_in = open(CORPUS, 'r')\n",
+    "f_in = codecs.open(CORPUS, 'r', 'UTF-8')\n",
     "data = f_in.read().splitlines()\n",
     "for i in range(len(data)):\n",
     "    data[i] = nt_funcl_re.sub(lambda x: remove_funcl(x), data[i])\n",
@@ -47,21 +59,21 @@
     "random.shuffle(data)\n",
     "\n",
     "corpus_train = data[:int(s_total * p_train)]\n",
-    "f_train = open(TB_TRAIN, 'w')\n",
+    "f_train = codecs.open(TB_TRAIN, 'w', 'UTF-8')\n",
     "for s in corpus_train:\n",
-    "    f_train.write(\"%s\\n\" % s)\n",
+    "    f_train.write(u\"{0}\\n\".format(s))\n",
     "f_train.close()\n",
     "\n",
     "corpus_dev = data[int(s_total * p_train) : int(s_total * (p_train + p_dev))]\n",
-    "f_dev = open(TB_DEV, 'w')\n",
+    "f_dev = codecs.open(TB_DEV, 'w', 'UTF-8')\n",
     "for s in corpus_dev:\n",
-    "    f_dev.write(\"%s\\n\" % s)\n",
+    "    f_dev.write(u\"{0}\\n\".format(s))\n",
     "f_dev.close()\n",
     "\n",
     "corpus_test = data[int(s_total * (p_train + p_dev)):]\n",
-    "f_test = open(TB_TEST, 'w')\n",
+    "f_test = codecs.open(TB_TEST, 'w', 'UTF-8')\n",
     "for s in corpus_test:\n",
-    "    f_test.write(\"%s\\n\" % s)\n",
+    "    f_test.write(u\"{0}\\n\".format(s))\n",
     "f_test.close()\n",
     "\n",
     "corpus_root = r\"./corpus/\"\n",
@@ -69,17 +81,17 @@
     "dev_file_pattern = r\".*_dev\\.tb\"\n",
     "ptb_dev = BracketParseCorpusReader(corpus_root, dev_file_pattern)\n",
     "trees = ptb_dev.parsed_sents()\n",
-    "f_out = open(TXT_DEV, 'w')\n",
+    "f_out = codecs.open(TXT_DEV, 'w', 'UTF-8')\n",
     "for tree in trees:\n",
-    "    f_out.write(\"%s\\n\" % (' '.join(tree.leaves())))\n",
+    "    f_out.write(u\"{0}\\n\".format(u\" \".join(tree.leaves())))\n",
     "f_out.close()\n",
     "\n",
     "test_file_pattern = r\".*_test\\.tb\"\n",
     "ptb_test = BracketParseCorpusReader(corpus_root, test_file_pattern)\n",
     "trees = ptb_test.parsed_sents()\n",
-    "f_out = open(TXT_TEST, 'w')\n",
+    "f_out = codecs.open(TXT_TEST, 'w', 'UTF-8')\n",
     "for tree in trees:\n",
-    "    f_out.write(\"%s\\n\" % (' '.join(tree.leaves())))\n",
+    "    f_out.write(u\"{0}\\n\".format(u\" \".join(tree.leaves())))\n",
     "f_out.close()\n",
     "\n",
     "print (\"Corpus size: %d\" % s_total)\n",
