Add non_terminals and terminals file.

--- a/PCFG_learn.ipynb
+++ b/PCFG_learn.ipynb
@@ -25,7 +25,10 @@
     "PCFG_POSTAGS_FREQ_FILE = os.path.join(\"model\", \"PCFG_postags_freq.pkl\")\n",
     "PCFG_UNARY_RULES_DICT_FILE = os.path.join(\"model\", \"PCFG_unary_dict.pkl\")\n",
     "PCFG_BINARY_RULES_DICT_FILE = os.path.join(\"model\", \"PCFG_binary_dict.pkl\")\n",
-    "PCFG_POSTAGS_DICT_FILE = os.path.join(\"model\", \"PCFG_postags_dict.pkl\")"
+    "PCFG_POSTAGS_DICT_FILE = os.path.join(\"model\", \"PCFG_postags_dict.pkl\")\n",
+    "PCFG_NT_SET_FILE = os.path.join(\"model\", \"PCFG_non_terminals_set.pkl\")\n",
+    "PCFG_T_SET_FILE = os.path.join(\"model\", \"PCFG_terminals_set.pkl\")\n",
+    "PCFG_POSTAGS_SET_FILE = os.path.join(\"model\", \"PCFG_postags_set.pkl\")"
    ]
   },
   {
@@ -80,7 +83,11 @@
       "Number of binary rule occurrances: 50974\n",
       "Number of binary lhs: 741\n",
       "Number of binary rhs: 2101\n",
-      ">>> Collection of rules and words parsing done in 3.814s.\n",
+      "\n",
+      "Number of non-terminal symbols: 741\n",
+      "Number of terminal symbols: 4078\n",
+      "\n",
+      ">>> Collection of rules and words parsing done in 4.359s.\n",
       "\n"
      ]
     }
@@ -89,18 +96,21 @@
     "t0 = time()\n",
     "print (\">>> Parsing collection of rules and words...\")\n",
     "\n",
+    "# Objects for unary rules (A -> B)\n",
     "unary_rules_freq = defaultdict(float)\n",
     "unary_rules_cnt_by_lhs = defaultdict(int)\n",
     "unary_rules_occur_cnt = 0\n",
     "unary_lhs_set = set()\n",
     "unary_rhs_set = set()\n",
     "\n",
+    "# Objects for binary rules (A -> BC)\n",
     "binary_rules_freq = defaultdict(float)\n",
     "binary_rules_cnt_by_lhs = defaultdict(int)\n",
     "binary_rules_occur_cnt = 0\n",
     "binary_lhs_set = set()\n",
     "binary_rhs_set = set()\n",
     "\n",
+    "# Objects for terminal rules (POS -> <word>)\n",
     "postags_freq = defaultdict(float)\n",
     "postags_cnt_by_pos = defaultdict(int)\n",
     "postags_occur_cnt = 0\n",
@@ -144,13 +154,17 @@
     "\n",
     "# Replace rare words in the postags_freq with '<UNK>'\n",
     "rare_words = set([w for w in words_set if words_occur_cnt[w] < 2])\n",
+    "T_set = words_set.copy()\n",
+    "T_set.difference_update(rare_words)\n",
+    "T_set.add(u\"<UNK>\")\n",
     "\n",
     "pw_pairs = list(postags_freq.keys())\n",
     "for (pos, w) in pw_pairs:\n",
     "    if w in rare_words:\n",
     "        postags_freq[(pos, u\"<UNK>\")] += postags_freq[(pos, w)]\n",
     "        postags_freq.pop((pos, w))\n",
-    "    \n",
+    "\n",
+    "# Normalization to ensure that the sum of outgoing weights is 1 for each NT node\n",
     "for (pos, w) in postags_freq:\n",
     "    postags_freq[(pos, w)] /= postags_cnt_by_pos[pos]\n",
     "\n",
@@ -187,10 +201,8 @@
     "for (lhs, rhs) in binary_rules_freq:\n",
     "    binary_rules_dict[rhs][lhs] = binary_rules_freq[(lhs, rhs)]\n",
     "    \n",
-    "for w in words_set:\n",
-    "    if w not in rare_words:\n",
-    "        postags_dict[w] = {}\n",
-    "postags_dict[u\"<UNK>\"] = {}\n",
+    "for w in T_set:\n",
+    "    postags_dict[w] = {}\n",
     "for (pos, w) in postags_freq:\n",
     "    postags_dict[w][pos] = postags_freq[(pos, w)]\n",
     "\n",
@@ -205,6 +217,21 @@
     "with codecs.open(PCFG_POSTAGS_DICT_FILE, 'wb') as f:\n",
     "    pickle.dump(postags_dict, f)\n",
     "f.close()\n",
+    "\n",
+    "# Store the set of non-terminals and terminals\n",
+    "NT_set = unary_lhs_set.union(binary_lhs_set)\n",
+    "\n",
+    "with codecs.open(PCFG_NT_SET_FILE, 'wb') as f:\n",
+    "    pickle.dump(NT_set, f)\n",
+    "f.close()\n",
+    "\n",
+    "with codecs.open(PCFG_T_SET_FILE, 'wb') as f:\n",
+    "    pickle.dump(T_set, f)\n",
+    "f.close()\n",
+    "\n",
+    "with codecs.open(PCFG_POSTAGS_SET_FILE, 'wb') as f:\n",
+    "    pickle.dump(postags_set, f)\n",
+    "f.close()\n",
     "        \n",
     "print (\"Size of dictionary: %d, of which %d are rare words\" % (len(words_set), len(rare_words)))\n",
     "print (\"Number of word occurrances: %d\" % postags_occur_cnt)\n",
@@ -218,7 +245,10 @@
     "print (\"Size of binary rules: %d\" % len(binary_rules_freq))\n",
     "print (\"Number of binary rule occurrances: %d\" % binary_rules_occur_cnt)\n",
     "print (\"Number of binary lhs: %d\" % len(binary_lhs_set))\n",
-    "print (\"Number of binary rhs: %d\" % len(binary_rhs_set))\n",
+    "print (\"Number of binary rhs: %d\\n\" % len(binary_rhs_set))\n",
+    "\n",
+    "print (\"Number of non-terminal symbols: %d\" % len(NT_set))\n",
+    "print (\"Number of terminal symbols: %d\\n\" % len(T_set))\n",
     "\n",
     "print (\">>> Collection of rules and words parsing done in %0.3fs.\\n\" % (time() - t0))"
    ]
