Add parse function.

--- a/CYK_parser.ipynb
+++ b/CYK_parser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,6 +23,7 @@
     "import string\n",
     "import re\n",
     "import nltk\n",
+    "from nltk import Tree\n",
     "from collections import defaultdict\n",
     "from nltk.corpus.reader.bracket_parse import BracketParseCorpusReader\n",
     "\n",
@@ -115,11 +116,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def CYK_parser(object):\n",
+    "class CYK_parser(object):\n",
     "    def __init__(self):\n",
     "        self.NT_set = set()                            # set of non-terminal symbols\n",
     "        self.T_set = set()                             # set of terminal symbols\n",
@@ -146,9 +147,11 @@
     "        self.postags_dict = postags_dict\n",
     "        self.not_initialized = False\n",
     "        \n",
-    "    def _parse_sent(self, s):\n",
+    "    def _parse_sent(self, s, verbose=False):\n",
+    "        t0 = time()\n",
+    "        \n",
     "        tokens = s.strip().split(u' ')\n",
-    "        n = len(words)\n",
+    "        n = len(tokens)\n",
     "        dp = defaultdict(float)\n",
     "        backPointers = {}\n",
     "        \n",
@@ -158,9 +161,12 @@
     "                dp[(i, i+1)] = self.postags_dict[w]\n",
     "            else:\n",
     "                dp[(i, i+1)] = self.postags_dict[u\"<UNK>\"]\n",
-    "            addUnaryRules(dp, backPointers, i, i+1)\n",
+    "            if verbose > 1:\n",
+    "                print (u\"->Add POS tag for {0}:\\n\".format(w))\n",
+    "                print (dp[(i, i+1)])\n",
+    "            self.add_unary_rules(dp, backPointers, i, i+1, verbose)\n",
     "        \n",
-    "        for l in range(2, n+2):\n",
+    "        for l in range(2, n + 1):\n",
     "            for i in range(0, n + 1 - l):\n",
     "                j = i + l\n",
     "                dp[(i, j)] = {}\n",
@@ -175,26 +181,57 @@
     "                                    if (A not in dp[(i, j)]) or prob > dp[(i, j)][A]:\n",
     "                                        dp[(i, j)][A] = prob\n",
     "                                        backPointers[(i, j, A)] = (s, B, C)\n",
-    "                addUnaryRules(dp, backPointers, i, j)\n",
-    "        return self.buildTree(dp, backPointers, words, n)\n",
-    "    \n",
-    "    def buildTree(self, dp, backPointers, words, n):\n",
-    "        if u\"SENT\" not in dp[(0, n + 1)]:\n",
-    "            return None\n",
+    "                                        if verbose > 1:\n",
+    "                                            print (u\"-->Add binary rule ({0}, {1}): {2} -> {3} {4} / {5}\\n\".format(i, j, A, B, C, prob))\n",
+    "                self.add_unary_rules(dp, backPointers, i, j, verbose)\n",
     "        \n",
+    "        if (0, n, u\"SENT\") not in backPointers:\n",
+    "            return None\n",
+    "        else:\n",
+    "            t = self.buildTree(backPointers, 0, n, u\"SENT\", tokens)\n",
+    "            t.un_chomsky_normal_form(expandUnary = False)\n",
+    "            return t\n",
+    " \n",
+    "    def add_unary_rules(self, dp, backPointers, i, j, verbose=False):\n",
+    "        B_set = dp[(i, j)].keys()\n",
+    "        for B in B_set:\n",
+    "            if B in self.unary_rules_dict:\n",
+    "                for A, prob_A in self.unary_rules_dict[B].iteritems():\n",
+    "                    prob = prob_A * dp[(i, j)][B]\n",
+    "                    if (A not in dp[(i, j)]) or prob > dp[(i, j)][A]:\n",
+    "                        dp[(i, j)][A] = prob\n",
+    "                        backPointers[(i, j, A)] = (B,)\n",
+    "                        if verbose > 1:\n",
+    "                            print (u\"-->Add unary rule ({0}, {1}): {2} -> {3} / {4}\\n\".format(i, j, A, B, prob))\n",
+    "        return\n",
+    "    \n",
+    "    def buildTree(self, backPointers, i, j, label, tokens):\n",
+    "        if (i, j, label) not in backPointers: # Terminals\n",
+    "            t = Tree(label, [tokens[i]])\n",
+    "        elif len(backPointers[(i, j, label)]) == 1: # Unary rules\n",
+    "            child_label = backPointers[(i, j, label)][0]\n",
+    "            t = Tree(label, [self.buildTree(backPointers, i, j, child_label, tokens)])\n",
+    "        else: # Binary rules\n",
+    "            split, child_label0, child_label1 = backPointers[(i, j, label)]\n",
+    "            t = Tree(label, [self.buildTree(backPointers, i, split, child_label0, tokens),\n",
+    "                             self.buildTree(backPointers, split, j, child_label1, tokens)])\n",
+    "        return t\n",
     "    \n",
     "    def parse_sent(self, input, output=None, verbose=False):\n",
     "        if self.not_initialized:\n",
     "            print (\"Parser must be initialized before calling parse function!\")\n",
     "            return\n",
+    "        \n",
     "        t0 = time()\n",
-    "        tree = self._parse_sent(input)\n",
+    "        \n",
+    "        tree = self._parse_sent(input, verbose)\n",
     "        if output == None:\n",
     "            print (tree)\n",
     "        else:\n",
     "            with codecs.open(output, 'w', 'UTF-8') as f:\n",
     "                f.write(u\"{0}\\n\".format(tree))\n",
     "                f.close()\n",
+    "                \n",
     "        if verbose:\n",
     "            print (\"Sentence parse done in %0.3fs\" % (time() - t0))\n",
     "        \n",
@@ -203,82 +240,86 @@
     "        if self.not_initialized:\n",
     "            print (\"Parser must be initialized before calling parse function!\")\n",
     "            return\n",
+    "        \n",
     "        to = time()\n",
+    "        \n",
     "        with codecs.open(input, 'r', 'UTF-8') as f_in:\n",
     "            if output != None:\n",
     "                f_out = codecs.open(output, 'w', 'UTF-8')\n",
     "            data = f_in.read().splitlines()\n",
     "            for sent in data:\n",
-    "                tree = self._parse_sent(sent)\n",
+    "                tree = self._parse_sent(sent, verbose)\n",
     "                if output != None:\n",
     "                    f_out.write(u\"{0}\\n\".format(tree))\n",
     "                else:\n",
     "                    print (u\"{0}\\n\".format(tree))\n",
     "            f_in.close()\n",
     "            if output != None:\n",
-    "                f_out.close()"
+    "                f_out.close()\n",
+    "                \n",
+    "        if verbose:\n",
+    "            print (\"Corpus parse done in %0.3fs\" % (time() - t0))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 141,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{u'ADJ': 0.21116179232626778,\n",
-       " u'ADJWH': 0.14285714285714285,\n",
-       " u'ADV': 0.08603736479842675,\n",
-       " u'CC': 0.0029651593773165306,\n",
-       " u'CLS': 0.0031446540880503146,\n",
-       " u'CS': 0.046511627906976744,\n",
-       " u'DET': 0.01844766329598251,\n",
-       " u'ET': 0.4397163120567376,\n",
-       " u'I': 1.0,\n",
-       " u'NC': 0.1449481431917029,\n",
-       " u'NPP': 0.21598826549321598,\n",
-       " u'P': 0.007597477064220184,\n",
-       " u'P+D': 0.023287671232876714,\n",
-       " u'P+PRO': 0.4,\n",
-       " u'PREF': 0.18,\n",
-       " u'PRO': 0.09329446064139942,\n",
-       " u'PROWH': 0.058823529411764705,\n",
-       " u'V': 0.16954787234042554,\n",
-       " u'VIMP': 0.52,\n",
-       " u'VINF': 0.20683610867659946,\n",
-       " u'VPP': 0.2513770655983976,\n",
-       " u'VPR': 0.31,\n",
-       " u'VS': 0.21311475409836064}"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "postags_dict[\"<UNK>\"]"
+    "test_sent = u\"La bivalirudine ne se lie pas aux protéines plasmatiques -LRB- autres que la thrombine -RRB- ni aux globules rouges .\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 142,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "parser = CYK_parser()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parser.initialize(NT_set, T_set, postags_set,\n",
+    "                  unary_rules_freq, binary_rules_freq, postags_freq,\n",
+    "                  unary_rules_dict, binary_rules_dict, postags_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "dict"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(SENT\n",
+      "  (NP (DET La) (NC bivalirudine))\n",
+      "  (VN (ADV ne) (CLR se) (V lie))\n",
+      "  (ADV pas)\n",
+      "  (PP\n",
+      "    (P+D aux)\n",
+      "    (NP (NC proteines) (AP plasmatiques) (PONCT -LRB-) (AP autres)))\n",
+      "  (Ssub\n",
+      "    (CS que)\n",
+      "    (NP (DET la) (NC thrombine))\n",
+      "    (PONCT -RRB-)\n",
+      "    (COORD (CC ni) (PP (P+D aux) (NP (NPP globules) (NPP rouges)))))\n",
+      "  (PONCT .))\n",
+      "Sentence parse done in 3.163s\n"
+     ]
     }
    ],
    "source": [
-    "type(binary_rules_dict)"
+    "parser.parse_sent(input=test_sent, output=None, verbose=1)"
    ]
   },
   {
