Remove instance specified parameters.

--- a/CYK_parser.ipynb
+++ b/CYK_parser.ipynb
@@ -8,9 +8,6 @@
    "source": [
     "#-*- coding: utf-8 -*-\n",
     "\n",
-    "MODEL_DIR = \"model\"\n",
-    "MELT_DIR = \"/usr/local/bin\"\n",
-    "\n",
     "from __future__ import print_function, unicode_literals\n",
     "import os\n",
     "import sys\n",
@@ -25,98 +22,12 @@
     "import nltk\n",
     "from nltk import Tree\n",
     "from collections import defaultdict\n",
-    "from nltk.corpus.reader.bracket_parse import BracketParseCorpusReader\n",
-    "\n",
-    "#from MElt_tagger import *\n",
-    "\n",
-    "PCFG_UNARY_RULES_FREQ_FILE = os.path.join(MODEL_DIR, \"PCFG_unary_freq.pkl\")\n",
-    "PCFG_BINARY_RULES_FREQ_FILE = os.path.join(MODEL_DIR, \"PCFG_binary_freq.pkl\")\n",
-    "PCFG_POSTAGS_FREQ_FILE = os.path.join(MODEL_DIR, \"PCFG_postags_freq.pkl\")\n",
-    "PCFG_UNARY_RULES_DICT_FILE = os.path.join(MODEL_DIR, \"PCFG_unary_dict.pkl\")\n",
-    "PCFG_BINARY_RULES_DICT_FILE = os.path.join(MODEL_DIR, \"PCFG_binary_dict.pkl\")\n",
-    "PCFG_POSTAGS_DICT_FILE = os.path.join(MODEL_DIR, \"PCFG_postags_dict.pkl\")\n",
-    "PCFG_NT_SET_FILE = os.path.join(MODEL_DIR, \"PCFG_non_terminals_set.pkl\")\n",
-    "PCFG_T_SET_FILE = os.path.join(MODEL_DIR, \"PCFG_terminals_set.pkl\")\n",
-    "PCFG_POSTAGS_SET_FILE = os.path.join(MODEL_DIR, \"PCFG_postags_set.pkl\")\n",
-    "TEXT= \"corpus/sequoia_dev.txt\""
+    "from nltk.corpus.reader.bracket_parse import BracketParseCorpusReader"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ">>> Loading PCFG model parameters...\n",
-      "PCFG model well normalized!\n",
-      ">>> PCFG model parameters load done in 0.399s.\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "t0 = time()\n",
-    "print (\">>> Loading PCFG model parameters...\")\n",
-    "\n",
-    "with codecs.open(PCFG_UNARY_RULES_FREQ_FILE, 'rb') as f:\n",
-    "    unary_rules_freq = pickle.load(f)\n",
-    "f.close()\n",
-    "with codecs.open(PCFG_BINARY_RULES_FREQ_FILE, 'rb') as f:\n",
-    "    binary_rules_freq = pickle.load(f)\n",
-    "f.close()\n",
-    "with codecs.open(PCFG_POSTAGS_FREQ_FILE, 'rb') as f:\n",
-    "    postags_freq = pickle.load(f)\n",
-    "f.close()\n",
-    "with codecs.open(PCFG_UNARY_RULES_DICT_FILE, 'rb') as f:\n",
-    "    unary_rules_dict = pickle.load(f)\n",
-    "f.close()\n",
-    "with codecs.open(PCFG_BINARY_RULES_DICT_FILE, 'rb') as f:\n",
-    "    binary_rules_dict = pickle.load(f)\n",
-    "f.close()\n",
-    "with codecs.open(PCFG_POSTAGS_DICT_FILE, 'rb') as f:\n",
-    "    postags_dict = pickle.load(f)\n",
-    "f.close()\n",
-    "with codecs.open(PCFG_NT_SET_FILE, 'rb') as f:\n",
-    "    NT_set = pickle.load(f)\n",
-    "f.close()\n",
-    "with codecs.open(PCFG_T_SET_FILE, 'rb') as f:\n",
-    "    T_set = pickle.load(f)\n",
-    "f.close()\n",
-    "with codecs.open(PCFG_POSTAGS_SET_FILE, 'rb') as f:\n",
-    "    postags_set = pickle.load(f)\n",
-    "f.close()\n",
-    "\n",
-    "# Check freq normalization\n",
-    "lhs_set = NT_set.copy().union(postags_set)\n",
-    "freq_sum_by_lhs = defaultdict(float)\n",
-    "\n",
-    "for (lhs, rhs) in unary_rules_freq.iterkeys():\n",
-    "    freq_sum_by_lhs[lhs] += unary_rules_freq[(lhs, rhs)]\n",
-    "for (lhs, rhs) in binary_rules_freq.iterkeys():\n",
-    "    freq_sum_by_lhs[lhs] += binary_rules_freq[(lhs, rhs)]\n",
-    "for (pos, w) in postags_freq:\n",
-    "    freq_sum_by_lhs[pos] += postags_freq[(pos, w)]\n",
-    "\n",
-    "flag = True\n",
-    "for v in freq_sum_by_lhs.itervalues():\n",
-    "    if abs(v - 1) > 1e-10:\n",
-    "        flag = False\n",
-    "        break\n",
-    "\n",
-    "if flag:\n",
-    "    print (\"PCFG model well normalized!\")\n",
-    "else:\n",
-    "    print (\"PCFG model not well normalized!\")\n",
-    "    \n",
-    "print (\">>> PCFG model parameters load done in %0.3fs.\\n\" % (time() - t0))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,6 +145,7 @@
     "                \n",
     "        if verbose:\n",
     "            print (\"Sentence parse done in %0.3fs\" % (time() - t0))\n",
+    "        return tree\n",
     "        \n",
     "        \n",
     "    def parse_corpus(self, input, output=None, verbose=False):\n",
@@ -260,74 +172,6 @@
     "        if verbose:\n",
     "            print (\"Corpus parse done in %0.3fs\" % (time() - t0))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 141,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_sent = u\"La bivalirudine ne se lie pas aux protéines plasmatiques -LRB- autres que la thrombine -RRB- ni aux globules rouges .\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 142,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "parser = CYK_parser()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 143,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "parser.initialize(NT_set, T_set, postags_set,\n",
-    "                  unary_rules_freq, binary_rules_freq, postags_freq,\n",
-    "                  unary_rules_dict, binary_rules_dict, postags_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 144,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(SENT\n",
-      "  (NP (DET La) (NC bivalirudine))\n",
-      "  (VN (ADV ne) (CLR se) (V lie))\n",
-      "  (ADV pas)\n",
-      "  (PP\n",
-      "    (P+D aux)\n",
-      "    (NP (NC proteines) (AP plasmatiques) (PONCT -LRB-) (AP autres)))\n",
-      "  (Ssub\n",
-      "    (CS que)\n",
-      "    (NP (DET la) (NC thrombine))\n",
-      "    (PONCT -RRB-)\n",
-      "    (COORD (CC ni) (PP (P+D aux) (NP (NPP globules) (NPP rouges)))))\n",
-      "  (PONCT .))\n",
-      "Sentence parse done in 3.163s\n"
-     ]
-    }
-   ],
-   "source": [
-    "parser.parse_sent(input=test_sent, output=None, verbose=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
